re PR c++/34050 (ICE derived classes and variadic templates)

2008-02-14  Douglas Gregor  <doug.gregor@gmail.com>

	PR c++/34050
	* pt.c (tsubst_initializer_list): Deal with the use of
	VOID_TYPE_NODE to indicate value-initialization of the bases.


2008-02-14  Douglas Gregor  <doug.gregor@gmail.com>

	PR c++/34050
	* g++.dg/cpp0x/vt-34050.C: New.

From-SVN: r132331